...
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="76dp"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/textView_duration" />

        <TextView
            android:id="@+id/textCode"
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:text="PLACEHOLDER"
            android:maxLines="1"
            android:layout_alignBaseline="@+id/textView_prompt_code"
            android:layout_alignBottom="@+id/textView_prompt_code"
            android:layout_alignStart="@+id/textDuration" />

        <TextView
            android:id="@+id/textView_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
...
