<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.CoordinatorLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ListView
            android:id="@+id/calendarListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/calendarView"/>

        </RelativeLayout>

        <android.support.design.widget.FloatingActionButton
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_add_button"
            app:layout_anchor="@id/calendarListView"
            app:layout_anchorGravity="top|right"
            android:id="@+id/fab"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/fab_margin"
             />

    </android.support.design.widget.CoordinatorLayout>
</layout>
